--- a/Demo.html
+++ b/Demo.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<h2>JavaScript const</h2>
+<h2>JavaScript consttt</h2>
 
 <p>Declaring a constant object does NOT make the objects properties unchangeable:</p>
 
